some error the fle that error will be solver

--- a/Customer.html
+++ b/Customer.html
@@ -62,7 +62,8 @@
   <script>
     function login() {
       // Allow any email & password, just redirect
-      window.location.href = "file:///D:/College/Web/Activity%202/Web%20Activity/index.html";
+      window.location.href = "./Customerpage.html";
+
       return false; // prevent actual form submission
     }
   </script>
