--- a/Fishman.html
+++ b/Fishman.html
@@ -70,7 +70,7 @@
 
       if (email && pass) {
         alert("Welcome Fisherman!");
-        window.location.href = "FishmanPage.html"; // Redirect to Fisherman Page
+        window.location.href = "./FishmanPage.html"; // Redirect to Fisherman Page
       } else {
         alert("Please enter both Email and Password!");
       }
