change the loginpage link

--- a/Admin.html
+++ b/Admin.html
@@ -71,7 +71,7 @@
 
       if (email && pass) {
         alert("Welcome Admin!");
-        window.location.href = "./AdminPage.html"; // Redirect to admin page
+        window.location.href = "./Adminpage.html"; // Redirect to admin page
       } else {
         alert("Please fill in both fields!");
       }
