--- a/Customer.html
+++ b/Customer.html
@@ -62,7 +62,7 @@
   <script>
     function login() {
       // Allow any email & password, just redirect
-      window.location.href = "https://your-site.vercel.app/Customerpage.html";
+      window.location.href = "./Customerpage.html";
 
       return false; // prevent actual form submission
     }
