change the loginpage link

--- a/Customer.html
+++ b/Customer.html
@@ -62,7 +62,7 @@
   <script>
     function login() {
       // Allow any email & password, just redirect
-      window.location.href = "./Customerpage.html";
+      window.location.href = "./customerpage.html";
 
       return false; // prevent actual form submission
     }
